--- a/ScripTerasu.ManageAzureAD/App.xaml
+++ b/ScripTerasu.ManageAzureAD/App.xaml
@@ -4,7 +4,7 @@
              xmlns:vm="clr-namespace:ScripTerasu.ManageAzureAD.ViewModel"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             StartupUri="MainWindow.xaml"
+             Startup="Application_Startup"
              mc:Ignorable="d">
     
     <Application.Resources>
