--- a/ScripTerasu.ManageAzureAD/LoginView.xaml
+++ b/ScripTerasu.ManageAzureAD/LoginView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ScripTerasu.ManageAzureAD.View.LoginView"
+﻿<Window x:Class="ScripTerasu.ManageAzureAD.LoginView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,21 +6,25 @@
         xmlns:ff="clr-namespace:FunctionalFun.UI"
         xmlns:ignore="http://www.ignore.com"
         mc:Ignorable="d ignore"  Height="300" Width="450"
-        DataContext="{Binding Login, Source={StaticResource Locator}}" 
         WindowStartupLocation="CenterScreen" 
         MinWidth="450" MinHeight="300" MaxWidth="450" MaxHeight="300" 
-        ResizeMode="NoResize">
+        ResizeMode="NoResize" Title="Inicie sesión" Icon="Icon.ico">
 
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding LoginCommand}"
+                    CommandParameter="{Binding ElementName=btnLogin, Path=Button}"
+                    Key="Enter"/>
+    </Window.InputBindings>
     <Grid>
         <StackPanel Margin="10" Orientation="Vertical">
             <Label Content="Inicie sesión" HorizontalAlignment="Stretch" FontSize="14" VerticalAlignment="Stretch" BorderThickness="1" Margin="10" FontFamily="Segoe UI Black"/>
             <TextBox Text="{Binding UserPrincipalName}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="28" TextWrapping="Wrap" Margin="5" FontSize="14" />
             <PasswordBox ff:PasswordBoxAssistant.BindPassword="true"  ff:PasswordBoxAssistant.BoundPassword="{Binding Path=UserPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  
                          HorizontalAlignment="Stretch" Margin="5" VerticalAlignment="Stretch" Height="28" FontSize="14"/>
-            <CheckBox  Content="Recordar credenciales" HorizontalAlignment="Stretch" Margin="5" FontSize="14" VerticalAlignment="Stretch" />
+            <CheckBox IsChecked="{Binding Remember}" Content="Recordar credenciales" HorizontalAlignment="Stretch" Margin="5" FontSize="14" VerticalAlignment="Stretch" />
             <Grid HorizontalAlignment="Stretch" Margin="30" VerticalAlignment="Stretch">
-                <Button Command="{Binding LoginCommand}" Content="Iniciar sesión" HorizontalAlignment="Left" Margin="10" Height="30" VerticalAlignment="Stretch" Width="150" Grid.Column="0"/>
-                <Button Command="{Binding CancelCommand}" Content="Cancelar" HorizontalAlignment="Right" VerticalAlignment="Stretch" Margin="10" Height="30" Width="150" Grid.Column="1"/>
+                <Button x:Name="btnLogin" Command="{Binding LoginCommand}" Content="Iniciar sesión" HorizontalAlignment="Left" Margin="10" Height="30" VerticalAlignment="Stretch" Width="150" Grid.Column="0"/>
+                <Button x:Name="btnCancel" Command="{Binding CancelCommand}" Content="Cancelar" HorizontalAlignment="Right" VerticalAlignment="Stretch" Margin="10" Height="30" Width="150" Grid.Column="1"/>
             </Grid>
         </StackPanel>
     </Grid>
