--- a/ScripTerasu.ManageAzureAD/View/Users/UserPropertiesView.xaml
+++ b/ScripTerasu.ManageAzureAD/View/Users/UserPropertiesView.xaml
@@ -28,13 +28,13 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Label Content="Nombre" />
-                    <TextBox Grid.Row="1" />
+                    <TextBox Text="{Binding FirstName}" Grid.Row="1" />
                     <Label Content="Apellidos" Grid.Row="2" />
-                    <TextBox Grid.Row="3" />
+                    <TextBox Text="{Binding LastName}" Grid.Row="3" />
                     <Label Content="* Nombre para mostrar" Grid.Row="4" />
-                    <TextBox Grid.Row="5" />
+                    <TextBox Text="{Binding DisplayName}" Grid.Row="5" />
                     <Label Content="* Nombre de usuario" Grid.Row="6" />
-                    <TextBox Grid.Row="7" />
+                    <TextBox Text="{Binding UserPrincipalName}" Grid.Row="7" />
                     <Expander Header="Detalles adicionales" Grid.Row="8" >
                         <Expander.Content>
                             <ScrollViewer VerticalScrollBarVisibility="Auto" >
@@ -61,29 +61,31 @@
                                         <RowDefinition Height="30"/>
                                         <RowDefinition Height="30"/>
                                         <RowDefinition Height="30"/>
+                                        <RowDefinition Height="30"/>
+                                        <RowDefinition Height="30"/>
                                     </Grid.RowDefinitions>
                                     <Label Content="Puesto" />
-                                    <TextBox Grid.Row="1" />
+                                    <TextBox Text="{Binding Title}" Grid.Row="1" />
                                     <Label Content="Departamento" Grid.Row="2" />
-                                    <TextBox Grid.Row="3" />
+                                    <TextBox Text="{Binding Department}" Grid.Row="3" />
                                     <Label Content="Oficina" Grid.Row="4" />
-                                    <TextBox Grid.Row="5" />
+                                    <TextBox Text="{Binding Office}" Grid.Row="5" />
                                     <Label Content="Teléfono de la oficina" Grid.Row="6" />
-                                    <TextBox Grid.Row="7" />
+                                    <TextBox Text="{Binding PhoneNumber}" Grid.Row="7" />
                                     <Label Content="Teléfono móvil" Grid.Row="8" />
-                                    <TextBox Grid.Row="9" />
+                                    <TextBox Text="{Binding MobilePhone}" Grid.Row="9" />
                                     <Label Content="Número de fax" Grid.Row="10" />
-                                    <TextBox Grid.Row="11" />
+                                    <TextBox Text="{Binding Fax}" Grid.Row="11" />
                                     <Label Content="Dirección" Grid.Row="12" />
-                                    <TextBox Grid.Row="13" />
+                                    <TextBox Text="{Binding StreetAddress}" Grid.Row="13" />
                                     <Label Content="Código postal" Grid.Row="14" />
-                                    <TextBox Grid.Row="15" />
+                                    <TextBox Text="{Binding PostalCode}" Grid.Row="15" />
                                     <Label Content="Ciudad" Grid.Row="16" />
-                                    <TextBox Grid.Row="17" />
+                                    <TextBox Text="{Binding City}" Grid.Row="17" />
                                     <Label Content="Estado o provincia" Grid.Row="18" />
-                                    <TextBox Grid.Row="19" />
+                                    <TextBox Text="{Binding State}" Grid.Row="19" />
                                     <Label Content="País o región" Grid.Row="20" />
-                                    <TextBox Grid.Row="21" />
+                                    <TextBox Text="{Binding Country}" Grid.Row="21" />
                                 </Grid>
                             </ScrollViewer>
                         </Expander.Content>
@@ -92,10 +94,9 @@
             </TabItem>
             <TabItem Header="Roles">
                 <Grid Background="#FFE5E5E5">
-                    
                 </Grid>
             </TabItem>
-            <TabItem Header="Configuración" Margin="3,0,-7,-2">
+            <TabItem Header="Configuración" >
                 <Grid Background="#FFE5E5E5">
                 </Grid>
             </TabItem>
